# loc

./: .pre-commit-config.yaml  Cargo.toml  LICENSE
.github/workflows/: test.yml
src/: cli.rs  main.rs  paths.rs  persistence.rs
