[package]
name = "loc"
version = "0.1.0"
edition = "2021"
description = "Command runner for the current working directory"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.29", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
xdg = "2.5.2"
