[package]
name = "loc"
version = "0.1.0"
edition = "2021"
description = "Command runner for the current working directory"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
xdg = "2.5.2"
